fixing layout issues in mobile

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -732,7 +732,7 @@ main {
   display: flex;
   justify-content: flex-start;
   align-items: flex-start;
-  gap: 15px;
+  gap: 75px;
   margin: 0 -15px;
   padding: 25px;
   padding-bottom: 25px;
@@ -749,7 +749,7 @@ main {
 }
 
 .clients-item img {
-  width: 100%;
+  height: 50px;
   filter: grayscale(1);
   transition: var(--transition-1);
 }
